# KrisLibrary

./: .gitignore  .travis.yml  CMakeLists.txt  File.cpp  File.h  LICENSE.txt  Logger.cpp  Logger.h  Makefile  Makefile.config  Makefile.config.cygwin  Makefile.config.klampt  Makefile.config.mac  Makefile.config.tmpl  Makefile.config.ubuntu  Makefile.template  README.md  Timer.cpp  Timer.h  doxygen.conf  doxygen.conf.in  errors.cpp  errors.h  logDummy.cpp  logDummy.h  myfile.cpp  myfile.h  utils.h
CMakeModules/: CPackSettings.cmake  CheckIncludeFileCXX.cmake  CheckInfNan.cmake  CompilerSettings.cmake  FindASSIMP.cmake  FindAssimp.cmake  FindFreeImage.cmake  FindGLPK.cmake  FindGLUI.cmake  FindKrisLibrary.cmake  FindLOG4CXX.cmake  FindLog4CXX.cmake  FindTinyXML.cmake  KrisLibraryDependencies.cmake
GLdraw/: BoxWidget.cpp  BoxWidget.h  ColorGradient.cpp  ColorGradient.h  GL.h  GLColor.cpp  GLColor.h  GLDisplayList.cpp  GLDisplayList.h  GLError.cpp  GLError.h  GLFog.cpp  GLFog.h  GLLight.cpp  GLLight.h  GLMaterial.cpp  GLMaterial.h  GLOffscreenContext.cpp  GLOffscreenContext.h  GLRenderToImage.cpp  GLRenderToImage.h  GLScreenshot.cpp  GLScreenshot.h  GLScreenshotProgram.h  GLTexture1D.cpp  GLTexture1D.h  GLTexture2D.cpp  GLTexture2D.h  GLTextureObject.cpp  GLTextureObject.h  GLUINavigationProgram.cpp  GLUINavigationProgram.h  GLUIProgram.cpp  GLUIProgram.h  GLUTNavigationProgram.cpp  GLUTNavigationProgram.h  GLUTProgram.cpp  GLUTProgram.h  GLUTString.h  GLView.cpp  (+15 more)
camera/: Makefile  camera.cpp  camera.h  clip.cpp  clip.h  frustum.cpp  frustum.h  transform.cpp  transform.h  viewport.cpp  viewport.h
geometry/: AnyGeometry.cpp  AnyGeometry.h  AnyGeometryType.h  AnyGeometryTypeImpl.cpp  AnyGeometryTypeImpl.h  Arrangement1D.cpp  Arrangement1D.h  BallTree.cpp  BallTree.h  CollisionConvexHull.cpp  CollisionConvexHull.h  CollisionHeightmap.cpp  CollisionHeightmap.h  CollisionImplicitSurface.cpp  CollisionImplicitSurface.h  CollisionMesh.cpp  CollisionMesh.h  CollisionOccupancyGrid.cpp  CollisionOccupancyGrid.h  CollisionPointCloud.cpp  CollisionPointCloud.h  CollisionPrimitive.cpp  CollisionPrimitive.h  Conversions.cpp  Conversions.h  ConvexHull2D.cpp  ConvexHull2D.h  ConvexHull3D.cpp  ConvexHull3D.h  DCEL.h  Fitting.cpp  Fitting.h  GeometryType.h  GeometryTypeImpl.cpp  GeometryTypeImpl.h  Grid.cpp  Grid.h  GridSubdivision.cpp  GridSubdivision.h  GridTable.h  (+35 more)
geometry/HACD_Lib/: CMakeLists.txt
geometry/HACD_Lib/inc/: hacdHACD.h
geometry/HACD_Lib/src/: hacdRaycastMesh.cpp
geometry/solid3/: CMakeLists copy.txt  CMakeLists.txt
geometry/solid3/include/: SOLID.h  SOLID_types.h
geometry/solid3/src/: CMakeLists.txt  DT_C-api.cpp  DT_Object.h
geometry/solid3/src/convex/: DT_Convex.cpp  DT_GJK.h  DT_Hull.h  DT_Polyhedron.cpp  DT_Transform.h
geometry/solid3/src/qhull/: CMakeLists.txt  geom2.c  global.c  rbox.c  user_eg2.c
graph/: APSP.h  ApproximateShortestPaths.h  Callback.h  ConnectedComponents.h  DirectedGraph.h  Edge.h  Graph.h  IO.cpp  IO.h  Node.h  Operations.h  Path.h  ShortestPaths.h  Tree.h  UndirectedGraph.h
image/: Makefile  bmp.cpp  formats.h  gdi.cpp  gdi.h  image.cpp  image.h  import.cpp  import.h  io.cpp  io.h  opencv_convert.h  ppm.cpp  ppm.h  textureops.cpp  textureops.h  tga.cpp
logging/: log4cxx.xml
math/: AABB.cpp  AABB.h  ASCIIShade.cpp  ASCIIShade.h  AngleSet.cpp  AngleSet.h  BLASInterface.cpp  BLASInterface.h  BlockPrinter.cpp  BlockPrinter.h  BlockTridiagonalMatrix.cpp  BlockTridiagonalMatrix.h  BlockVector.cpp  BlockVector.h  CholeskyDecomposition.cpp  CholeskyDecomposition.h  ConditionedConstraint.cpp  ConditionedConstraint.h  Conditioner.cpp  Conditioner.h  DiagonalMatrix.cpp  DiagonalMatrix.h  GramSchmidt.cpp  GramSchmidt.h  Householder.cpp  Householder.h  InequalityConstraint.cpp  InequalityConstraint.h  Interval.h  IntervalSet.cpp  IntervalSet.h  LAPACKInterface.cpp  LAPACKInterface.h  LDL.cpp  LDL.h  LUDecomposition.cpp  LUDecomposition.h  LinearPath.cpp  LinearPath.h  LinearlyDependent.cpp  (+78 more)
math3d/: AABB2D.cpp  AABB2D.h  AABB3D.cpp  AABB3D.h  AABBTemplate.h  Box2D.h  Box3D.cpp  Box3D.h  Circle2D.h  Circle3D.cpp  Circle3D.h  ConvexHull3D.cpp  ConvexHull3D.h  Cylinder3D.cpp  Cylinder3D.h  Ellipsoid3D.h  Line2D.cpp  Line2D.h  Line3D.cpp  Line3D.h  LinearAlgebra.cpp  LinearAlgebra.h  LinearlyDependent.cpp  LinearlyDependent.h  LocalCoordinates2D.cpp  LocalCoordinates2D.h  LocalCoordinates3D.cpp  LocalCoordinates3D.h  Makefile  Plane2D.h  Plane3D.cpp  Plane3D.h  Point.h  Polygon2D.cpp  Polygon2D.h  Polygon3D.cpp  Polygon3D.h  Polyhedron3D.cpp  Polyhedron3D.h  Ray2D.h  (+36 more)
meshing/: AreaGrid.cpp  AreaGrid.h  ClosestPoint.cpp  ClosestPoint.h  Expand.cpp  Expand.h  Geodesic.cpp  Geodesic.h  Heightmap.cpp  Heightmap.h  IO.cpp  IO.h  IntTriple.h  LSConformalMapping.cpp  LSConformalMapping.h  Makefile  MarchingCubes.cpp  MarchingCubes.h  MeshPrimitives.cpp  MeshPrimitives.h  Meshing.cpp  Meshing.h  PointCloud.cpp  PointCloud.h  Rasterize.cpp  Rasterize.h  TriMesh.cpp  TriMesh.h  TriMeshAtlas.h  TriMeshOperators.cpp  TriMeshOperators.h  TriMeshTopology.cpp  TriMeshTopology.h  VolumeGrid.cpp  VolumeGrid.h  Voxelize.cpp  Voxelize.h
msvc/: KrisLibrary.sln  KrisLibrary.vcxproj  KrisLibrary.vcxproj.filters  assimp.props  assimp_debug.props  assimp_release.props  boost.props  glpk.props  tinyxml.props
msvc64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  KrisLibrary.sln  KrisLibrary.vcxproj  KrisLibrary.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  uninstall.vcxproj  uninstall.vcxproj.filters
optimization/: BoundedLSQRSolver.cpp  BoundedLSQRSolver.h  GLPKInterface.cpp  GLPKInterface.h  LCP.cpp  LCP.h  LPOptimumFunction.cpp  LPOptimumFunction.h  LPRobust.cpp  LPRobust.h  LPSolveInterface.cpp  LPSolveInterface.h  LP_InteriorPoint.cpp  LP_InteriorPoint.h  LSQRInterface.cpp  LSQRInterface.h  LeastSquares.cpp  LeastSquares.h  LinearProgram.cpp  LinearProgram.h  Makefile  MinNormProblem.cpp  MinNormProblem.h  Minimization.cpp  Minimization.h  Newton.cpp  Newton.h  (+25 more)
(+363 files in other folders)
