project(HACD_LIB CXX C)
include(FindOpenMP)
if(OPENMP_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
set(LIB_TYPE "STATIC" CACHE STRING "STATIC, SHARED or MODULE?")
set(HACD_LIB_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/inc PARENT_SCOPE)
# message("[HACD] \t LIB_TYPE " ${LIB_TYPE})
include_directories(${PROJECT_SOURCE_DIR}/inc)
file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)
add_library(HACD_LIB SHARED ${SRC_FILES})

# message("[HACD] \t -> CMAKE_INSTALL_PREFIX " ${CMAKE_INSTALL_PREFIX})
# install(TARGETS HACD_LIB DESTINATION bin)
# install(FILES ${PROJECT_INC_FILES} DESTINATION include)
# install(FILES ${PROJECT_INL_FILES} DESTINATION include)

